refactor data download

--- a/Fremont Bridge Bicycle Analysis.ipynb
+++ b/Fremont Bridge Bicycle Analysis.ipynb
@@ -8,129 +8,39 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set_style('darkgrid')\n",
     "\n",
     "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=Download'\n",
-    "response = requests.get(URL)\n",
     "\n",
-    "with open('Fremont.csv', 'wb') as f:\n",
-    "    f.write(response.content)"
+    "    \n",
+    "def get_data(filename='Fremont.csv', url=URL, force_download=False):\n",
+    "    if force_download or not os.path.exists(filename):\n",
+    "        response = requests.get(URL)\n",
+    "        with open('Fremont.csv', 'wb') as f:\n",
+    "            f.write(response.content)\n",
+    "    date_format = \"%m/%d/%Y %I:%M:%S %p\"\n",
+    "    df = pd.read_csv('Fremont.csv', index_col='Date', parse_dates=True, date_format=date_format)\n",
+    "    df.columns = ['Total', 'West', 'East']\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1c7bd282",
+   "execution_count": 2,
+   "id": "df043d40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fremont Bridge Sidewalks, south of N 34th St</th>\n",
-       "      <th>Fremont Bridge Sidewalks, south of N 34th St Cyclist West Sidewalk</th>\n",
-       "      <th>Fremont Bridge Sidewalks, south of N 34th St Cyclist East Sidewalk</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2012-10-02 13:00:00</th>\n",
-       "      <td>55.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-10-02 14:00:00</th>\n",
-       "      <td>130.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-10-02 15:00:00</th>\n",
-       "      <td>152.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>71.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-10-02 16:00:00</th>\n",
-       "      <td>278.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>111.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-10-02 17:00:00</th>\n",
-       "      <td>563.0</td>\n",
-       "      <td>393.0</td>\n",
-       "      <td>170.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Fremont Bridge Sidewalks, south of N 34th St  \\\n",
-       "Date                                                                \n",
-       "2012-10-02 13:00:00                                          55.0   \n",
-       "2012-10-02 14:00:00                                         130.0   \n",
-       "2012-10-02 15:00:00                                         152.0   \n",
-       "2012-10-02 16:00:00                                         278.0   \n",
-       "2012-10-02 17:00:00                                         563.0   \n",
-       "\n",
-       "                     Fremont Bridge Sidewalks, south of N 34th St Cyclist West Sidewalk  \\\n",
-       "Date                                                                                      \n",
-       "2012-10-02 13:00:00                                                7.0                    \n",
-       "2012-10-02 14:00:00                                               55.0                    \n",
-       "2012-10-02 15:00:00                                               81.0                    \n",
-       "2012-10-02 16:00:00                                              167.0                    \n",
-       "2012-10-02 17:00:00                                              393.0                    \n",
-       "\n",
-       "                     Fremont Bridge Sidewalks, south of N 34th St Cyclist East Sidewalk  \n",
-       "Date                                                                                     \n",
-       "2012-10-02 13:00:00                                               48.0                   \n",
-       "2012-10-02 14:00:00                                               75.0                   \n",
-       "2012-10-02 15:00:00                                               71.0                   \n",
-       "2012-10-02 16:00:00                                              111.0                   \n",
-       "2012-10-02 17:00:00                                              170.0                   "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "date_format = \"%m/%d/%Y %I:%M:%S %p\"\n",
-    "df = pd.read_csv('Fremont.csv', index_col='Date', parse_dates=True, date_format=date_format)\n",
-    "df.head(5)"
+    "df = get_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "c9c6a312",
    "metadata": {},
    "outputs": [
@@ -140,7 +50,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,19 +66,12 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Set Seaborn style\n",
-    "sns.set_style('darkgrid')\n",
-    "\n",
-    "df.columns = ['Total', 'West', 'East']\n",
     "df.resample('w').sum().plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "4769f2a3",
    "metadata": {},
    "outputs": [
@@ -178,7 +81,7 @@
        "(0.0, 1256022.05)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -200,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "b5d7c788",
    "metadata": {},
    "outputs": [
@@ -210,7 +113,7 @@
        "<Axes: xlabel='time'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -231,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "6b11b7c8",
    "metadata": {},
    "outputs": [
@@ -317,7 +220,7 @@
        "04:00:00         NaN         7.0         8.0         9.0         5.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "147d69ac",
    "metadata": {},
    "outputs": [
@@ -339,7 +242,7 @@
        "<Axes: xlabel='time'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
