Move data download to analysis_packages

--- a/Fremont Bridge Bicycle Analysis.ipynb
+++ b/Fremont Bridge Bicycle Analysis.ipynb
@@ -4,34 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "8849388d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "sns.set_style('darkgrid')\n",
-    "\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=Download'\n",
-    "\n",
-    "    \n",
-    "def get_data(filename='Fremont.csv', url=URL, force_download=False):\n",
-    "    if force_download or not os.path.exists(filename):\n",
-    "        response = requests.get(URL)\n",
-    "        with open('Fremont.csv', 'wb') as f:\n",
-    "            f.write(response.content)\n",
-    "    date_format = \"%m/%d/%Y %I:%M:%S %p\"\n",
-    "    df = pd.read_csv('Fremont.csv', index_col='Date', parse_dates=True, date_format=date_format)\n",
-    "    df.columns = ['Total', 'West', 'East']\n",
-    "    return df"
+    "from analysis_packages.data import get_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df043d40",
+   "id": "31163aed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +243,16 @@
    ],
    "source": [
     "pivoted.plot(legend=False, alpha=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d8f18fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_data?"
    ]
   }
  ],
